[tool.poetry]
name = "marshover"
version = "0.1.0"
description = ""
authors = ["Bruno Artur <batlopes@yahoo.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"
pytest-bdd = "^5.0.0"
behave = "^1.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
